--- a/logic/main.css
+++ b/logic/main.css
@@ -6,14 +6,14 @@
 */
 
 :root {
-	--text-color: #fff;
-	--background-color: black;
-	--menu-background-color: #111;
-	--accent-color: #8727b8;
+	--text-color: #c3ccc1;
+	--background-color: #202124;
+	--menu-background-color: #202124;
+	--accent-color: #6E85CA;
 	--secondary-accent-color: orange;
 	--tertiary-accent-color: green;
+	--error-color: #c95656;
 }
-
 
 
 body {
@@ -21,19 +21,29 @@ body {
 	display: -ms-flexbox;
 	display: flex;
 	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+	-ms-flex-align: center;
+	align-items: center;
 
 	background-color: var(--background-color);
 	color: var(--text-color);
 	height: 100vh;
 	overflow: hidden;
-	margin: 0; 
+	margin: 0;
 	padding: 0;
 }
 
-body *, #userInput {
+body *,
+#userInput {
 	font-family: "Lucida Console", Monaco, monospace;
+}
+
+#userInput {
+	border-radius: 1rem;
+	background-color: #303134;
+	border: 0 none;
+	outline: none;
+	padding: 1rem 2rem 1.2rem;
+	color: white;
 }
 
 * {
@@ -55,7 +65,7 @@ body *, #userInput {
 		-webkit-transform .07s linear;
 }
 
-#selectors{
+#selectors {
 	position: absolute;
 	top: 2vmax;
 	right: 7vmax;
@@ -71,7 +81,7 @@ select {
 	background-image: url('../img/settingsIcon.webp');
 	background-size: cover;
 	-webkit-filter: invert(1);
-	        filter: invert(1);
+	filter: invert(1);
 	background-repeat: no-repeat;
 	border: none;
 
@@ -85,11 +95,12 @@ select {
 	height: 3vmax;
 }
 
-.preferenceButton:hover, .closePreferenceButton:hover {
+.preferenceButton:hover,
+.closePreferenceButton:hover {
 	opacity: 1;
 	-webkit-transform: scale(1.1);
-	    -ms-transform: scale(1.1);
-	        transform: scale(1.1);
+	-ms-transform: scale(1.1);
+	transform: scale(1.1);
 }
 
 .closePreferenceButton {
@@ -107,7 +118,7 @@ select {
 
 	-webkit-filter: invert(1);
 
-	        filter: invert(1);
+	filter: invert(1);
 
 	border: none;
 }
@@ -136,15 +147,15 @@ select {
 	display: flex;
 	-webkit-box-orient: vertical;
 	-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
+	-ms-flex-direction: column;
+	flex-direction: column;
 	-ms-flex-pack: distribute;
-	    justify-content: space-around;
+	justify-content: space-around;
 	-ms-flex-wrap: nowrap;
-	    flex-wrap: nowrap;
+	flex-wrap: nowrap;
 	-webkit-box-align: end;
-	    -ms-flex-align: end;
-	        align-items: flex-end;
+	-ms-flex-align: end;
+	align-items: flex-end;
 	padding: 0 1vh 0 0;
 
 	height: 55vh;
@@ -171,7 +182,7 @@ li input {
 	margin: 0 1.5vh 0 auto;
 }
 
-h1	{
+h1 {
 	font-size: 3.5vmax;
 	text-transform: uppercase;
 	letter-spacing: 1vw;
@@ -184,11 +195,11 @@ nav {
 	display: flex;
 	-webkit-box-orient: vertical;
 	-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
+	-ms-flex-direction: column;
+	flex-direction: column;
 	-webkit-box-pack: justify;
-	    -ms-flex-pack: justify;
-	        justify-content: space-between;
+	-ms-flex-pack: justify;
+	justify-content: space-between;
 
 	width: 10vw;
 	height: 84vh;
@@ -202,26 +213,26 @@ nav {
 	display: flex;
 	-webkit-box-orient: vertical;
 	-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
+	-ms-flex-direction: column;
+	flex-direction: column;
 	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+	-ms-flex-align: center;
+	align-items: center;
 	height: 90%;
 	margin-right: 10vmax;
 	margin-bottom: 3vh;
 
 	-webkit-box-flex: 2;
 
-	    -ms-flex: 2 1 1000px;
+	-ms-flex: 2 1 1000px;
 
-	        flex: 2 1 1000px;
+	flex: 2 1 1000px;
 }
 
 nav button {
 	-webkit-box-flex: 1;
-	    -ms-flex: 1 1 11vh;
-	        flex: 1 1 11vh;
+	-ms-flex: 1 1 11vh;
+	flex: 1 1 11vh;
 	margin: .5vh auto;
 	width: 11vh;
 	font-size: 1.5vh;
@@ -264,16 +275,16 @@ button:focus {
 	display: flex;
 	-webkit-box-orient: vertical;
 	-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
+	-ms-flex-direction: column;
+	flex-direction: column;
 	/*justify-content: center;*/
 	width: 67vmin;
 	/*height: 30vmin;*/
 }
 
 .fade {
-    -webkit-mask-image: linear-gradient(to right, rgba(0,0,0,1) 75%, rgba(0,0,0,0));
-    /*height: 20%;*/
+	-webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 1) 75%, rgba(0, 0, 0, 0));
+	/*height: 20%;*/
 }
 
 .prompt {
@@ -299,7 +310,7 @@ button:focus {
 	margin: 6.5vmin auto 0 auto;
 }
 
-.line{
+.line {
 	white-space: nowrap;
 }
 
@@ -328,12 +339,13 @@ input {
 	display: -ms-flexbox;
 	display: flex;
 	-ms-flex-pack: distribute;
-	    justify-content: space-around;
+	justify-content: space-around;
 
 	font-size: 5vmin;
 }
 
-#scoreText, #timeText {
+#scoreText,
+#timeText {
 	font-family: 'Verdana', sans-serif;
 }
 
@@ -343,20 +355,20 @@ input {
 	display: flex;
 	-webkit-box-orient: vertical;
 	-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
+	-ms-flex-direction: column;
+	flex-direction: column;
 	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+	-ms-flex-align: center;
+	align-items: center;
 	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
+	-ms-flex-pack: center;
+	justify-content: center;
 
 	-webkit-box-flex: 1;
 
-	    -ms-flex: 1 1 8vh;
+	-ms-flex: 1 1 8vh;
 
-	        flex: .8 1 7vh;
+	flex: .8 1 7vh;
 }
 
 .bottomText {
@@ -389,57 +401,57 @@ a:link {
 
 /* The switch - the box around the slider */
 .switch {
-  position: relative;
-  display: inline-block;
-  width: 7.5vmin;
-  height: 4.5vmin;
+	position: relative;
+	display: inline-block;
+	width: 7.5vmin;
+	height: 4.5vmin;
 }
 
 /* Hide default HTML checkbox */
 .switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
+	opacity: 0;
+	width: 0;
+	height: 0;
 }
 
 /* The slider */
 .slider {
- 	position: absolute;
- 	cursor: pointer;
- 	top: 0;
- 	left: 0;
- 	right: 0;
- 	bottom: 0;
- 	background-color: #444;
+	position: absolute;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: #444;
 }
 
 .slider:before {
-  position: absolute;
-  content: "";
-  height: 3vmin;
-  width: 3vmin;
-  left: .75vmin;
-  bottom: .75vmin;
-  background-color: white;
-  -webkit-transition: .4s;
-  -webkit-transition: .2s;
-  -o-transition: .2s;
-  transition: .2s;
+	position: absolute;
+	content: "";
+	height: 3vmin;
+	width: 3vmin;
+	left: .75vmin;
+	bottom: .75vmin;
+	background-color: white;
+	-webkit-transition: .4s;
+	-webkit-transition: .2s;
+	-o-transition: .2s;
+	transition: .2s;
 }
 
-input:checked + .slider {
-  background-color: var(--accent-color);
+input:checked+.slider {
+	background-color: var(--accent-color);
 }
 
-input:focus + .slider {
-  -webkit-box-shadow: 0 0 1px purple;
-          box-shadow: 0 0 1px purple;
+input:focus+.slider {
+	-webkit-box-shadow: 0 0 1px purple;
+	box-shadow: 0 0 1px purple;
 }
 
-input:checked + .slider:before {
-  -webkit-transform: translateX(3vmin);
-  -ms-transform: translateX(3vmin);
-  transform: translateX(3vmin);
+input:checked+.slider:before {
+	-webkit-transform: translateX(3vmin);
+	-ms-transform: translateX(3vmin);
+	transform: translateX(3vmin);
 }
 
 
@@ -456,22 +468,23 @@ input:checked + .slider:before {
 	display: -ms-flexbox;
 	display: flex;
 	-webkit-box-pack: justify;
-	    -ms-flex-pack: justify;
-	        justify-content: space-between;
+	-ms-flex-pack: justify;
+	justify-content: space-between;
 	height: 5vh;
 	width: 75vh;
 }
 
-.key, .cKey {
+.key,
+.cKey {
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
 	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
+	-ms-flex-pack: center;
+	justify-content: center;
 	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
+	-ms-flex-align: center;
+	align-items: center;
 	background-color: var(--background-color);
 	border: .2vh solid var(--accent-color);
 	height: 75%;
@@ -539,14 +552,14 @@ input:checked + .slider:before {
 .inactive {
 	border-color: var(--accent-color);
 	-webkit-filter: brightness(0.5);
-	        filter: brightness(0.5);
+	filter: brightness(0.5);
 }
 
 .currentLevelKeys {
 	border-color: var(--tertiary-accent-color);
 	color: var(--tertiary-accent-color);
 	-webkit-filter: brightness(1.2);
-	        filter: brightness(1.2);
+	filter: brightness(1.2);
 }
 
 .homeRow {
@@ -563,7 +576,7 @@ input:checked + .slider:before {
 	border-color: var(--accent-color);
 	color: var(--accent-color);
 	-webkit-filter: brightness(1.5);
-	        filter: brightness(1.5);
+	filter: brightness(1.5);
 }
 
 
@@ -572,7 +585,7 @@ input:checked + .slider:before {
 	border-color: var(--text-color);
 	color: white;
 	-webkit-filter: brightness(1.5);
-	        filter: brightness(1.5);
+	filter: brightness(1.5);
 }
 
 
@@ -580,7 +593,7 @@ input:checked + .slider:before {
 	background-image: url('https://upload.wikimedia.org/wikipedia/commons/c/cc/Edit_Notepad_Icon.svg');
 	background-size: cover;
 	-webkit-filter: invert(1);
-	        filter: invert(1);
+	filter: invert(1);
 
 	position: relative;
 	top: -.3vmax;
@@ -596,8 +609,8 @@ input:checked + .slider:before {
 
 .openUIButton:hover {
 	-webkit-transform: scale(1.2);
-	    -ms-transform: scale(1.2);
-	        transform: scale(1.2);
+	-ms-transform: scale(1.2);
+	transform: scale(1.2);
 }
 
 /*__________________custom ui keyboard________________*/
@@ -606,8 +619,8 @@ input:checked + .slider:before {
 	position: absolute;
 	-webkit-box-orient: vertical;
 	-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
+	-ms-flex-direction: column;
+	flex-direction: column;
 	left: 23vw;
 	top: 23vh;
 	z-index: 100;
@@ -617,8 +630,8 @@ input:checked + .slider:before {
 	height: 37vmax;
 	width: 60vmax;
 	-webkit-transform: scaleX(0);
-	    -ms-transform: scaleX(0);
-	        transform: scaleX(0);
+	-ms-transform: scaleX(0);
+	transform: scaleX(0);
 	display: none;
 
 	-webkit-transition: -webkit-transform .15s linear;
@@ -662,14 +675,15 @@ input:checked + .slider:before {
 	border-color: #777;
 }
 
-.selectedInputKey, .selectedInputKey:hover {
+.selectedInputKey,
+.selectedInputKey:hover {
 	border-color: white;
 	opacity: .9;
 }
 
 .pulse {
 	-webkit-animation: pulse .8s infinite;
-	        animation: pulse .8s infinite;
+	animation: pulse .8s infinite;
 }
 
 
@@ -689,13 +703,14 @@ input:checked + .slider:before {
 	display: -ms-flexbox;
 	display: flex;
 	-webkit-box-pack: justify;
-	    -ms-flex-pack: justify;
-	        justify-content: space-between;
+	-ms-flex-pack: justify;
+	justify-content: space-between;
 
 	width: 90%;
 }
 
-.saveButton, .discardButton {
+.saveButton,
+.discardButton {
 	font-size: 2.3vmax;
 
 	height: 1vmax;
@@ -705,10 +720,11 @@ input:checked + .slider:before {
 }
 
 
-.saveButton:hover, .discardButton:hover {
+.saveButton:hover,
+.discardButton:hover {
 	-webkit-transform: scale(1.05);
-	    -ms-transform: scale(1.05);
-	        transform: scale(1.05);
+	-ms-transform: scale(1.05);
+	transform: scale(1.05);
 }
 
 /*__________________custom level select________________*/
@@ -735,7 +751,7 @@ input:checked + .slider:before {
 .customUILevelButton:hover {
 	opacity: 1;
 	-webkit-filter: brightness(1.5);
-	        filter: brightness(1.5);
+	filter: brightness(1.5);
 }
 
 .currentCustomUILevel {
@@ -743,7 +759,7 @@ input:checked + .slider:before {
 	color: var(--tertiary-accent-color);
 	background-color: #2f3f2f;
 	opacity: 1;
-} 
+}
 
 
 /*____________________Toggle-able classes______________*/
@@ -786,55 +802,44 @@ input:checked + .slider:before {
 	position: relative;
 	color: blue;
 	-webkit-animation: slideLeft .2s 1 linear;
-	        animation: slideLeft .2s 1 linear;
+	animation: slideLeft .2s 1 linear;
 	-webkit-animation-fill-mode: forwards;
-	        animation-fill-mode: forwards;
+	animation-fill-mode: forwards;
 }
 
 .slideOff {
 	position: relative;
 	color: blue;
 	-webkit-animation: slideOff .2s 1 linear;
-	        animation: slideOff .2s 1 linear;
+	animation: slideOff .2s 1 linear;
 	-webkit-animation-fill-mode: forwards;
-	        animation-fill-mode: forwards;
+	animation-fill-mode: forwards;
 }
 
 @-webkit-keyframes pulse {
-	0%   { 
+	0% {
 		opacity: 1;
 	}
-	60% { 
+
+	60% {
 		opacity: 1;
 	}
-	100% { 
+
+	100% {
 		opacity: 0;
 	}
 }
 
 @keyframes pulse {
-	0%   { 
+	0% {
 		opacity: 1;
 	}
-	60% { 
+
+	60% {
 		opacity: 1;
 	}
-	100% { 
+
+	100% {
 		opacity: 0;
 	}
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
